--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.18",
+    "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
+    "nodemon": "^2.0.4",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-star-rating": "^1.6.1",
+    "vue-swal": "^1.0.0",
     "vuetify": "^2.2.32"
   },
   "devDependencies": {
