--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "sass-loader": "^8.0.2",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-star-rating": "^1.6.1",
     "vue-swal": "^1.0.0",
-    "vuetify": "^2.2.32"
+    "vuetify": "^2.2.32",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
