--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "unit": " mocha tests/unit/controllers/movies.spec.js",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
@@ -51,6 +51,7 @@
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "chai": "^4.1.2",
+    "chai-http": "^4.3.0",
     "chromedriver": "83",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
